--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:dev": "next build",
     "lint": "eslint --ignore-pattern .eslintignore . --fix",
     "format": "prettier --write .",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "seed": "ts-node src/seed/articlesSeed-db.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.6.0",
@@ -27,6 +28,7 @@
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
+    "openai": "^4.96.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rss-parser": "^3.13.0",
@@ -55,6 +57,7 @@
     "prettier": "^3.2.5",
     "prisma": "^6.6.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "lint-staged": {
