--- a/package.json
+++ b/package.json
@@ -36,7 +36,13 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.3",
+    "@hookform/resolvers": "^3.3.2",
+    "react-hook-form": "^7.47.0",
+    "next-auth": "^5.0.0-beta.4",
+    "bcryptjs": "^2.4.3",
+    "server-only": "^0.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -60,7 +66,8 @@
     "prisma": "^6.6.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/bcryptjs": "^2.4.6"
   },
   "lint-staged": {
     "*.ts?(x)": [
