--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "seed": "ts-node src/seed/articlesSeed-db.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-collapsible": "^1.1.7",
@@ -23,30 +24,31 @@
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.3",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "cli-progress": "^3.12.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.17.3",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
+    "next-auth": "^5.0.0-beta.16",
     "next-themes": "^0.4.6",
     "openai": "^4.96.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.47.0",
     "rss-parser": "^3.13.0",
+    "server-only": "^0.0.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "zustand": "^5.0.3",
-    "@hookform/resolvers": "^3.3.2",
-    "react-hook-form": "^7.47.0",
-    "next-auth": "^5.0.0-beta.16",
-    "bcryptjs": "^2.4.3",
-    "server-only": "^0.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cli-progress": "^3.11.6",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -66,8 +68,7 @@
     "prisma": "^6.6.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
-    "typescript": "^5",
-    "@types/bcryptjs": "^2.4.6"
+    "typescript": "^5"
   },
   "lint-staged": {
     "*.ts?(x)": [
